
  [ Ben Wiederhake ]
  * wrap-and-sort:
    + Add a dry-run option. (Closes: #808574)

  [ Pierre-Elliott Bécue ]
  * d/control:
    +  Add myself to uploaders.
  * wrap-and-sort:
    + Tweak the way files are handled, and print the modified file list in
      also in non-dry-run-mode when verbosity is enabled.
    + s/self.opts/self.args/g
    + Removes also the beginning empty lines of a file

 -- Pierre-Elliott Bécue <becue@crans.org>  Wed, 07 Mar 2018 20:17:05 +0100

devscripts (2.18.1) unstable; urgency=medium

  [ Yavor Doganov ]
  * ltnu:
    + Add pkg-gnustep shortcut.  Closes: #885917

  [ Steve Langasek ]
  * tests:
    + Fix test_debchange when run on Debian derivatives.  Closes: #886211

  [ Mattia Rizzolo ]
  * bts:
    + Fix syntax issue in the POD documentation, so it can be built with an
      older pod as well.
  * ltnu:
    + Avoid using L<> with emails in the POD documentation, so it can be built
      with an older pod as well.
  * reproducible-check:
    + Instruct to install python3-xdg if missing.  Closes: #888307
  * mk-origtargz:
    + Split list of files to delete if the list gets too long to fit ARG_MAX.
      Thanks to Ximin Luo <infinity0> for the initial patch.  Closes: #855464
  * debian/control:
    + Change maintainer email from alioth to devscripts@packages.debian.org.
    + Move the Git repository to salsa.debian.org.

  [ Osamu Aoki ]
  * uupdate:
    + bash completion fix by Julian Gilbey.  Closes: #834006
  * uscan:
    + clarify importance of version=4.  Closes: #884880
    + add hrefdecode option.  Closes: #884604
    + git HEAD tracking features.  Closes: #811565
    + refine target directory documentation.  Closes: #841519
    + add test for FTP protocol.

  [ James McCoy ]
  * debrepro:
    + Add a --help option and include options description in the usage output.

  [ Axel Beckert ]
  * ltnu:
    + Add option "-m" to only look in the Maintainer field and not also in
      the Uploaders field.  Closes: #887380
